--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,13 @@ repositories {
 
 allure {
     report {
-        version.set("2.21.0")
+        version.set("2.25.0")
     }
     adapter {
         aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set("2.21.0")
+                adapterVersion.set("2.25.0")
             }
         }
     }
@@ -31,7 +31,9 @@ dependencies {
             'io.rest-assured:json-schema-validator:5.4.0',
             "io.qameta.allure:allure-rest-assured:2.21.0",
             'org.junit.jupiter:junit-jupiter:5.10.0',
-            'org.slf4j:slf4j-simple:2.0.7'
+            'org.slf4j:slf4j-simple:2.0.7',
+            'com.codeborne:selenide:6.19.1',
+            'io.qameta.allure:allure-selenide:2.25.0'
     )
 }
 
