--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,14 @@ dependencies {
             'org.junit.jupiter:junit-jupiter:5.10.0',
             'org.slf4j:slf4j-simple:2.0.7',
             'com.codeborne:selenide:6.19.1',
-            'io.qameta.allure:allure-selenide:2.25.0'
+            'io.qameta.allure:allure-selenide:2.25.0',
+            'org.aeonbits.owner:owner:1.0.12'
     )
 }
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 
     testLogging {
         lifecycle {
